Fix the underline on next post links ( will now wrap multiple lines).

--- a/scss/blog/_post.scss
+++ b/scss/blog/_post.scss
@@ -25,16 +25,17 @@
 	color: rgb(167,169,172);
 }
 
+.hero .related-posts p:nth-of-type(2) {
+	margin-top: 1em;
+}
+
 .related-posts a {
 	margin-bottom: 1em;
-	display: inline-block;
+	// display: inline-block;
 	text-decoration: none;
 	color: inherit;
 	font-size: 1.15em;
-}
-
-.related-posts a:last-child {
-	margin-bottom: 0;
+	display: inline;
 }
 
 @media screen and (max-width: 980px) {
