--- a/style.css
+++ b/style.css
@@ -310,15 +310,15 @@ pre {
   margin-bottom: 0.25em;
   color: #a7a9ac; }
 
+.hero .related-posts p:nth-of-type(2) {
+  margin-top: 1em; }
+
 .related-posts a {
   margin-bottom: 1em;
-  display: inline-block;
   text-decoration: none;
   color: inherit;
-  font-size: 1.15em; }
-
-.related-posts a:last-child {
-  margin-bottom: 0; }
+  font-size: 1.15em;
+  display: inline; }
 
 @media screen and (max-width: 980px) {
   .related-posts {
